; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_hotkey_start.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_hotkey_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.game_capture = type { i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@CAPTURE_MODE_HOTKEY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [24 x i8] c"Activate hotkey pressed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32*, i32)* @hotkey_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hotkey_start(i8* %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.game_capture*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.game_capture*
  store %struct.game_capture* %11, %struct.game_capture** %9, align 8
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %4
  %15 = load %struct.game_capture*, %struct.game_capture** %9, align 8
  %16 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %15, i32 0, i32 3
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @CAPTURE_MODE_HOTKEY, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %33

21:                                               ; preds = %14
  %22 = call i32 @info(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %23 = load %struct.game_capture*, %struct.game_capture** %9, align 8
  %24 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %23, i32 0, i32 2
  %25 = call i64 (...) @GetForegroundWindow()
  %26 = call i32 @os_atomic_set_long(i32* %24, i64 %25)
  %27 = load %struct.game_capture*, %struct.game_capture** %9, align 8
  %28 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %27, i32 0, i32 1
  %29 = call i32 @os_atomic_set_bool(i32* %28, i32 1)
  %30 = load %struct.game_capture*, %struct.game_capture** %9, align 8
  %31 = getelementptr inbounds %struct.game_capture, %struct.game_capture* %30, i32 0, i32 0
  %32 = call i32 @os_atomic_set_bool(i32* %31, i32 1)
  br label %33

33:                                               ; preds = %21, %14, %4
  ret i32 1
}

declare dso_local i32 @info(i8*) #1

declare dso_local i32 @os_atomic_set_long(i32*, i64) #1

declare dso_local i64 @GetForegroundWindow(...) #1

declare dso_local i32 @os_atomic_set_bool(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
